2021-08-05  Dirk Eddelbuettel  <edd@debian.org>

	* inst/bib/Rcpp.bib: Use https for CRAN URLs
	* vignettes/rmd/Rcpp.bib: Idem

2021-07-25  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Version, Date): Roll minor version
        * inst/include/Rcpp/config.h: Idem

2021-07-24  Dirk Eddelbuettel  <edd@debian.org>

	* vignettes/rmd/Rcpp-FAQ.Rmd: New entry on growing vectors

2021-07-08  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Version, Date): Roll minor version
        * inst/include/Rcpp/config.h: Idem

	* cleanup: Check for optional vignettes/rmd before trying to access it

2021-07-06  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Date, Version): Release 1.0.7

        * inst/include/Rcpp/config.h: Idem
        * inst/NEWS.Rd: Idem
        * vignettes/rmd/Rcpp.bib: Idem
        * inst/bib/Rcpp.bib: Idem
	* vignettes/pdf/*: Rebuilt

2021-07-05  Iñaki Ucar  <iucar@fedoraproject.org>

	* src/barrier.cpp (Rcpp_precious_remove): Protect from call with
	wrong token when unloading modules compiled under earlier version

2021-07-02  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/Rcpp/r/headers.h: Update notice as January 2022
	release will remove protection for STRICT_R_HEADERS making it default

2021-05-27  Dirk Eddelbuettel  <edd@debian.org>

	* inst/tinytest/cpp/rcppversion.cpp (checkVersion): Allow for more
	than four components of a development version number
	* inst/tinytest/test_packageversion.R: Idem
	* inst/include/Rcpp/config.h (RCPP_DEV_VERSION): Clarify in comment

2021-05-13  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Version, Date): Roll minor version
        * inst/include/Rcpp/config.h: Idem

2021-05-09  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/RcppCommon.h: Add cfloat header

2021-04-09  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/Rcpp/hash/IndexHash.h: Silence one comparison, update
	use of unsigned int to uint32_t throughout
