@@ -5,9 +5,8 @@ using namespace Rcpp;
 
 // [[Rcpp::export]]
 double piSugar(const int N) {
-  RNGScope scope;		// ensure RNG gets set/reset
-  NumericVector x = runif(N);
-  NumericVector y = runif(N);
-  NumericVector d = sqrt(x*x + y*y);
-  return 4.0 * sum(d < 1.0) / N;
+    NumericVector x = runif(N);
+    NumericVector y = runif(N);
+    NumericVector d = sqrt(x*x + y*y);
+    return 4.0 * sum(d < 1.0) / N;
 }
